# rag-play

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  justfile  notebook.ipynb  pyproject.toml
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  docker-compose.code.yml
.github/: copilot-instructions.md
docker/: docker-compose.services.yml
src/rag/: main.py
