[project]
name = "rag-play"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "ipython>=9.4.0",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain[openai]>=0.3.27",
    "langgraph[openai]>=0.5.4",
    "lark>=1.2.2",
    "polars>=1.31.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/rag"]

[dependency-groups]
dev = ["ipykernel>=6.30.0", "ruff>=0.12.5"]
